fix css z-index

--- a/src/components/MenuButton/menuButton.module.css
+++ b/src/components/MenuButton/menuButton.module.css
@@ -10,4 +10,5 @@
   background-color: transparent;
   cursor: pointer;
   outline: none;
+  z-index: 2;
 }
