--- a/src/components/MobileNav/navigation.module.css
+++ b/src/components/MobileNav/navigation.module.css
@@ -39,12 +39,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: 100;
+  z-index: 1;
 
   padding-top: 60px;
   width: 100%;
   height: 100%;
-  scroll-behavior: unset;
   background: rgb(155, 200, 255);
   background: linear-gradient(
     0deg,
