--- a/src/components/Team/team.module.css
+++ b/src/components/Team/team.module.css
@@ -74,6 +74,7 @@
   height: 100%;
   padding: 10px;
   border-block-end: 4px solid var(--accent-color);
+  border-top: 4px solid var(--accent-color);
 
   background-color: var(--light-color);
   transform: translateX(-100%);
